--- a/hospital-backend-jenkins/pom.xml
+++ b/hospital-backend-jenkins/pom.xml
@@ -18,7 +18,7 @@
   <packaging>war</packaging>
 
   <name>hospital</name>
-  <description>E-commerce Backend for Deployment</description>
+  <description>hospital management</description>
 
   <properties>
     <java.version>21</java.version>
@@ -95,6 +95,7 @@
 
 
   <build>
+  <finalName>myspringbootproject</finalName>
     <plugins>
       <!-- Maven Plugin for WAR packaging -->
       <plugin>
