--- a/hospital-backend-jenkins/pom.xml
+++ b/hospital-backend-jenkins/pom.xml
@@ -18,7 +18,7 @@
   <packaging>war</packaging>
 
   <name>hospital</name>
-  <description>hospital management</description>
+  <description>myspringbootproject</description>
 
   <properties>
     <java.version>21</java.version>
